# OMDOCTOR

./: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json
backend/: build.spec  pyproject.toml  run.py  tcm_doctor.db
backend/app/: config.py  database.py  main.py  seed.py
backend/app/data/: classic_formulas.json  generate_herbs.py  generate_knowledge.py  herbs.json  herbs_extended.json  incompatibility_rules.json  knowledge_data.py  knowledge_entries.json
backend/app/data/books/: danxixinfa.json  fuqingzhu_nvke.json  furen_daqqu_liangfang.json  gen_jingui_1.py  gen_jingui_2.py  gen_lingshu.py  gen_piwei_danxi.py  gen_shanghanlun_1.py  gen_shanghanlun_2.py  gen_shanghanlun_3.py  gen_shanghanlun_4.py  gen_shanghanlun_5.py  gen_suwen_1.py  gen_suwen_2.py  gen_wenbing.py  gen_zhenjiu.py  huanghuang_jingfang_yian.json  jingfang_shiyanlu.json  jinguiyaolue_1.json  jinguiyaolue_2.json  lingshu.json  linzheng_zhinan_yian.json  piweilun.json  pufuzhou_yian.json  shanghanlun_1.json  shanghanlun_2.json  shanghanlun_3.json  shanghanlun_4.json  shanghanlun_5.json  suwen_1.json  suwen_2.json  wenbingtiaobian.json  yixue_zhongxi_canxilu.json  (+4 more)
backend/app/models/: __init__.py  conversation.py  herb.py  knowledge.py  patient.py  prescription.py  visit.py
backend/app/routers/: backup.py  diagnosis.py  herb.py  knowledge.py  patient.py  prescription.py  stats.py
backend/app/schemas/: diagnosis.py  herb.py  patient.py  prescription.py
backend/app/services/: ai_diagnosis_service.py  constitution_evaluator.py  incompatibility_checker.py  vector_store.py
(+30 files in other folders)
