[project]
name = "tcm-doctor-backend"
version = "0.1.0"
description = "中医诊所问诊管理平台后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
ai = [
    "chromadb>=0.4",
    "sentence-transformers",
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
